# civee

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: Basic.frag  Basic.vert
src/: Engine.cpp  Engine.h  main.cpp
src/Core/: Application.cpp  Application.h  Config.h  Engine.cpp  Engine.h  GraphicsContext.cpp  GraphicsContext.h  Layer.h
src/Editor/: EditorLayer.h  ViewportClient.h
src/Game/: CivLayer.h  Level.cpp  Level.h  SelectionManager.cpp  SelectionManager.h  SimLayer.h
src/Physics/: Physics.h
src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/Renderer/: Buffer.cpp  Buffer.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  VertexArray.cpp  VertexArray.h
src/Renderer/Camera/: OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h
src/Renderer/Data/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  MeshLibrary.cpp  MeshLibrary.h  ModelLoader.cpp  ModelLoader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureLibrary.cpp  TextureLibrary.h  VertexArray.cpp  VertexArray.h
src/Renderer/Scene/: GameObject.h  LightEnvironment.h  Lights.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h
src/Utils/: GridUtils.h  HexUtils.h  MathUtils.h  MeshUtils.h
